# DataStructure-Algorithm

./: .replit  main.py  pyproject.toml
스파르타파이썬/: 1.변수 선언과 자료형.py  10.파일불러오기.py  11.한줄의 마법.py  12.map, filter, lamda 식.py  13.함수심화.py  2.문자열다루기.py  3.리스트와 딕셔너리.py  4.조건문.py  5.반복문.py  6.함수.py  7.튜플, 집합.py  8.f-string.py  9.예외처리.py  main_func.py
혼공파/: 13. 비,파괴적 연산py  15.문자열의 in연산자.py  16.format() 함수 고급.py  17.불자료형.py  18.날짜와시간 구하는법.py  19.if 조건문.py  2.식별자.py  20.elif else 구문.py  22.수열과배열.py  23.배열과리스트.py  24.리스트의함수.py  25.for 반복문.py  25.중첩리스트.py  26.전개연산자.py  28.딕셔너리와반복문.py  30.범위와 반복문.py  31.reversed().py  4.자료형과 확인.py  5.문자열만들기.py  7.문자열길이.py  9.input( ).py
혼공파/Chapter 02 자료형/: 1.문장,표현식,리터럴,연산자,키워드.py  10.format 함수, split 함수.py  11.f-문자열.py  14.is(), find(), rfind().py  3.주석.py  6.문자열연산자.py  8.숫자.py
혼공파/Chapter 03 조건문/: 21.도전문제.py  24.리스트의함수.py
혼공파/Chapter 04 반복문/: 25.for 반복문.py  27.list,반복문 확인문제.py  29.딕셔너리의 요소 제거,추가,변경.py  32.while문.py  32.리스트내포.py  33. 파이썬 고유 함수.py  34.join().py
