[tool.poetry]
name = "repl-nix-python-study"
version = "0.1.0"
description = ""
authors = ["yonainthefish <yonaisgood@gmail.com>"]
readme = "README.md"
packages = [{include = "repl_nix_python_study"}]

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
